fixed chart size being too large on smaller screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2519,7 +2519,7 @@ div#right {
 }
 
 #curve_chart {
-    width: 100%; 
+    width: auto; 
     height: 500px;
 }
 
